# PyCFPU

./: README.md  __init__.py  cfpurecon.py  pyproject.toml
data/: demo_nodes__cantius_tooth.txt  demo_nodes__frog.txt  demo_nodes__homer.txt  demo_nodes__interlocked_tori.txt  demo_nodes__trefoil_N11616.txt  demo_nodes__trefoil_N18816.txt  demo_nodes__trefoil_N23064.txt  demo_nodes__trefoil_N27744.txt  demo_nodes__trefoil_N32856.txt  demo_nodes__trefoil_N6144.txt  demo_nodes__trefoil_N8664.txt  demo_normals__cantius_tooth.txt  demo_normals__frog.txt  demo_normals__homer.txt  demo_normals__interlocked_tori.txt  demo_normals__mammoth_tooth.txt  demo_normals__trefoil_N11616.txt  demo_normals__trefoil_N18816.txt  demo_normals__trefoil_N23064.txt  demo_normals__trefoil_N27744.txt  demo_normals__trefoil_N32856.txt  demo_normals__trefoil_N6144.txt  demo_normals__trefoil_N8664.txt  demo_patches.txt  demo_patches__armadillo.txt  demo_patches__bunny_large.txt  demo_patches__dancing_children.txt  demo_patches__filigree.txt  demo_patches__frog.txt  demo_patches__gargoyle.txt  demo_patches__happy_buddha.txt  demo_patches__homer.txt  demo_patches__interlocked_tori.txt  demo_patches__mammoth_tooth.txt  demo_patches__pump_carter.txt  demo_patches__raptor_head.txt  demo_patches__stanford_bunny.txt  demo_patches__stanford_dragon.txt  demo_patches__trefoil_N11616.txt
scripts/: render_pyvista.py  save_all_figs.py
util/: curlfree_poly.py  gcv_cost_function.py  weight.py
